2009-10-26	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/main.c: Respect the ICEAUTHORITY environment
	  variable (bug 4369).

2009-01-26	Jannis Pohlmann <jannis@xfce.org>

	* == Released 4.5.99.1 ==
	* NEWS: Update NEWS file for the release.
	* configure.in.in: Bump version number.

2009-01-14	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Post-release version bump.

2009-01-12	Stephan Arts <stephan@xfce.org>

	* === Release 4.5.93 ===
	* configure.in.in: Bump version number

2009-01-11	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS for the upcoming 4.5.93 release.

2008-12-26	Brian Tarricone <bjt23@cornell.edu>

	* engines/balou/config.c: Use xfce_message_dialog() instead of
	  xfce_err(), fix string a bit.

2008-12-03	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/shutdown.c: Change "Log off" text to "Log out" to be
	  consistent with the rest of the UI.

2008-11-27	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: On suspend/hibernate, ignore errors
	  of type DBUS_GERROR_NO_REPLY, not type _TIMEOUT (bug 4628).

2008-11-27	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Check for pwd.h and getpwuid ().
	* xfce4-session/shutdown.c: Display the currently logged-in user
	  in a label in the shutdown dialog (bug 3083).

2008-11-15	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-startup.c: Be sure to properly signal that
	  startup is complete when running from the failsafe session.

2008-11-15	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Fix autostart getting run twice when
	  the failsafe session is used (bug 4486).

2008-11-14  Stephan Arts <stephan@xfce.org>

	* NEWS, po/POTFILES.in, configure.in.in: Update files for 4.6 beta2
	  release

2008-11-12	Brian Tarricone <bjt23@cornell.edu>

	* settings/main.c: Hook up Help button.
	* settings/xfce4-session-settings.glade: Fix Help button response
	  and button order.