@@ -2,6 +2,9 @@
 ======================
 
 - Respect the ICEAUTHORITY env var (bug 4369).
+- Fix sudo shutdown helper for sysetms without HAL (bug 4849).
+- Avoid a spurious error dialog when using the sudo shutdown helper
+  to shut down the system (bug 4849).
 
 4.5.99.1 (Xfce 4.6rc1)
 ======================
