@@ -1,4 +1,11 @@
-2009-10-26	Brian Tarricone <bjt23@cornell.edu>
+2009-02-01	Brian Tarricone <bjt23@cornell.edu>
+
+	* xfce4-session/xfsm-shutdown-helper.c: Fix sudo shutdown helper;
+	  use the correct offset into the command string table.  Also
+	  ignore EINTR on errors, as the shutdown helper sometimes gets
+	  killed before replying to the SM (bug 4849).
+
+2009-01-26	Brian Tarricone <bjt23@cornell.edu>
 
 	* xfce4-session/main.c: Respect the ICEAUTHORITY environment
 	  variable (bug 4369).
